<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GitTry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks_done">Tasks Done</string>
    <string name="current_score">Current Score:</string>
    <string name="tasks_failed">Tasks Failed</string>
    <string name="ongoing_tasks">Ongoing tasks</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sing_up">Sing Up</string>
    <string name="sing_in">Sing In</string>
    <string name="logo">LOGO</string>
    <string name="register">Register</string>
    <string name="usernamer">Username</string>
    <string name="passwordr">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registerp">Register</string>
    <string name="back">Back</string>
    <string name="this_is_an_sample_task_inside_the_application">This is an Sample Task inside the application.</string>
    <string name="this_is_an_sample_task_inside_the_application1">This is an Sample Task inside the application.</string>
    <string name="this_is_an_sample_task_inside_the_application2">This is an Sample Task inside the application.</string>
    <string name="this_is_an_sample_task_inside_the_application3">This is an Sample Task inside the application.</string>
    <string name="this_is_an_sample_task_inside_the_application4">This is an Sample Task inside the application.</string>
    <string name="tasks">TASKS</string>
    <string name="add">ADD</string>
    <string name="first_fragment">First Fragment</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_task_form">TaskFormAc</string>
    <string name="email">Email</string>
    <string name="go_to_home">Go to Home</string>
    <string name="task_added_here1">TASK ADDED HERE</string>
    <string name="create_your_task">Create Your Task</string>
    <string name="task_added_here2">TASK ADDED HERE</string>
    <string name="task_added_here3">TASK ADDED HERE</string>
    <string name="task_added_here4">TASK ADDED HERE</string>
    <string name="task_added_here5">TASK ADDED HERE</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
</resources>