<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@color/backgroundc">

    <EditText
        android:id="@+id/passwordsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:hint="@string/password"
        android:textColorHint="@color/crem"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/visiniuDeschis" />

    <EditText

        android:id="@+id/usernamesi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/username"
        android:textColorHint="@color/crem"
        app:counterEnabled="true"
        app:errorEnabled="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo2"
        android:contentDescription="@string/logo" />


    <Button
        android:id="@+id/SingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/roz"
        android:text="@string/sing_up"
        android:textColor="@color/white"
        android:textStyle="italic" />
    <Button
        android:id="@+id/SingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="259dp"
        android:backgroundTint="@color/roz"
        android:textColor="@color/white"
        android:text="@string/sing_in"
        android:textStyle="italic"/>


</RelativeLayout>

