<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/backgroundc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical"
        android:background="@color/roz">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="45sp"
            android:fontFamily="monospace"
            android:textColor="@color/griDeschis"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_marginTop="39dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/crem"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/visiniuInchis"
            android:textColorHint="@color/visiniuInchis"
            />

        <EditText
            android:layout_marginTop="50dp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/crem"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/visiniuInchis"
            android:textColorHint="@color/visiniuInchis"
             />

        <EditText
            android:layout_marginTop="50dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/crem"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/visiniuInchis"
            android:textColorHint="@color/visiniuInchis"
            />

        <Button
            android:id="@+id/registernow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/roz"
            android:text="@string/register"
            android:textColor="@color/crem" />

    </LinearLayout>

</RelativeLayout>
