<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsForMainAplicationPage.Profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="250dp"
        android:src="@drawable/logo2"
        app:civ_border_color="@color/roz"
        app:civ_border_width="3dp"
        >

    </de.hdodenhof.circleimageview.CircleImageView>

    <Button
        android:id="@+id/pupload"
        android:layout_marginBottom="130dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:backgroundTint="@color/roz"
        android:text="Upload Photo"
        android:textColor="@color/crem"
        style="?android:attr/buttonBarButtonStyle" />

    <androidx.cardview.widget.CardView
        android:layout_marginStart="50dp"
        android:id="@+id/card1"
        android:layout_marginTop="300dp"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cardCornerRadius="50dp"
        android:backgroundTint="@color/roz">
        <ImageView
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription"/>

        <TextView
            android:textColor="@color/crem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tasks_done"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_marginStart="230dp"
        android:layout_marginTop="300dp"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cardCornerRadius="50dp"
        android:backgroundTint="@color/roz">
        <ImageView
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_call_made_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

        <TextView
            android:textColor="@color/crem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ongoing_tasks"
            android:textSize="15sp"/>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_marginStart="230dp"
        android:layout_marginTop="450dp"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cardCornerRadius="50dp"
        android:backgroundTint="@color/roz">
        <ImageView
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_emoji_events_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />
        <TextView
            android:textColor="@color/crem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/current_score"
            android:textSize="15sp"/>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginStart="50dp"
        android:id="@+id/card4"
        android:layout_marginTop="450dp"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cardCornerRadius="50dp"
        android:backgroundTint="@color/roz">
        <ImageView
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_call_received_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription"/>

        <TextView
            android:textColor="@color/crem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tasks_failed"
            android:textSize="15sp"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/roz"
        android:text="Log Out"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="650dp"
        android:layout_marginLeft="240dp"
        android:textColor="@color/crem"
        />


</FrameLayout>